<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskActivity">

    <EditText
        android:id="@+id/create_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Task"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/create_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Task"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/create_task_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>