<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TaskListActivity"
    tools:showIn="@layout/activity_task_list">

    <TextView
        android:id="@+id/task_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="Testing"
        android:inputType="textEmailAddress"
        android:visibility="invisible"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/task_separator"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="15dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/task_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>